--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,10 +15,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.7.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+flutter_icons:
+  image_path: assets/icons8-contact-details-100.png
+  android: true
 
 dev_dependencies:
   flutter_test:
